--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1906,6 +1906,7 @@ svg{
     }
     #currentDataWrapper{
         width:100%;
+        height:41px;
         top:50px;
         right:0;
         z-index: 6;
@@ -1921,7 +1922,8 @@ svg{
         width:100%;
         text-align: center;
         border-radius: 0px;
-        font-size: 1em;
+        font-size: 0.8em;
+        line-height: 1.6em;
         opacity: 0.9;
     }
     #toggleDark{
