Disable opening sidebar on center map, edit onStatsScroll function to detect up/down scroll, remove sideBarState, remove scrollbars on all browsers, add overflow:hidden to worldStats, edit chartArray.length condition to only make chart when length is more than 3

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -80,6 +80,8 @@
 }
 *, :after, :before {
     box-sizing: border-box;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 *::-webkit-scrollbar {
     display: none;
@@ -1340,7 +1342,7 @@ header{
 }
 #worldStats{
     padding:15px 12px 25px;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 .worldStats-flex{
     display: -webkit-box; display: -ms-flexbox; display: flex;
