Change vaccine colors on light mode for country profile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -117,7 +117,7 @@
     color:#4cf6af!important;
 }
 .light .green{
-    color:#209222!important;
+    color:#33a976!important;
 }
 .dark-path{
     fill:#000!important;
