Increase stroke-width on chart line hover, error handling for xhr functions.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1261,7 +1261,7 @@ h2{
     width: auto;
     height: 39px;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: hidden;
     padding:0px;
     margin-bottom:0px;
 }
