Fix weird extra path node on NY path element on us.svg, revert to css transition method for switchToggle, fix optionsDiv bug on iPhone with setting minHeight to height, remove flex-shrink to worldStats, add onCloseSearch on search result click.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1255,11 +1255,24 @@ h2{
 #casesTitle{
     opacity: 1;
 }
+.switch-rect, .switch-titles{
+    -o-transition:0.15s ease-in;  
+    -moz-transition:0.15s ease-in;  
+    -webkit-transition:0.15s ease-in;  
+    transition:0.15s ease-in;
+}
+#switchCircle{
+    -o-transition:0.15s ease-in-out;  
+    -moz-transition:0.15s ease-in-out;  
+    -webkit-transition:0.15s ease-in-out;  
+    transition:0.15s ease-in-out;
+}
 /* end switch */
 /* begin dropdown */
 .options-div{
     width: auto;
     height: 39px;
+    min-height: 39px;
     overflow-x: hidden;
     overflow-y: hidden;
     padding:0px;
@@ -1384,7 +1397,6 @@ h2{
     -ms-flex-direction: column;
     flex-direction: column;
     -ms-flex-negative: 1000;
-    flex-shrink: 1000;
     -webkit-box-align: start;
     -ms-flex-align: start;
     align-items: flex-start;
