--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -262,6 +262,7 @@ html{
 }
 body{
     width:100%;
+    height:100%;
     overflow-x:hidden;
     overflow-y: hidden;
 }
@@ -505,7 +506,7 @@ body{
     position:-webkit-sticky;
     position: sticky;
     top:5px;
-    min-height: calc(100vh - 60px);
+    min-height: calc(calc(100 * var(--vh)) - 60px);
     padding:0 10px 100px;
     margin:5px 0;
     background-color: #1b1b1b;
@@ -572,7 +573,7 @@ body{
     -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center;
     margin-top:2.5px;
     margin-left:0.5%;
-    padding-bottom: 100px;
+    padding-bottom: 75px;
 }
 .stats-column-flex{
     position: relative;
@@ -882,9 +883,13 @@ body{
     -moz-transition: 0.2s ease-out;
     -webkit-transition: 0.2s ease-out;
     transition: 0.2s ease-out;
+    pointer-events: none;
 }
 .hover-line, .chart-horiz-lines{
     stroke:#282828;
+}
+.hover-info{
+    pointer-events: none;
 }
 .light .hover-line, .light .chart-horiz-lines{
     stroke:#e6e6e6;
@@ -943,7 +948,7 @@ body{
 .overlay{
     position: fixed;
     width:100%;
-    height: 100vh;
+    height: calc(100 * var(--vh));
     background-color: #000;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1149,7 +1154,7 @@ h2{
     -ms-transform:scale(1.2);
     -webkit-transform:scale(1.2);
     transform:scale(1.2);
-    border-radius: 0px!important;
+    /* border-radius: 0px!important; */
 }
 .light .on-color-hover{
     border:1px solid #000;
@@ -1158,7 +1163,6 @@ h2{
     -webkit-box-flex:1;
     -ms-flex:1 1 auto;
     flex:1 1 auto;
-    margin-left: 15px;
 }
 .data-range{
     display: -webkit-box;
@@ -1168,6 +1172,7 @@ h2{
     -ms-flex-align: center;
     align-items: center;
     white-space: nowrap;
+    padding-left:15px;
 }  
 .data-line, .data-line-small{
     display: none;
@@ -1499,7 +1504,7 @@ h2{
 /* begin map */
 #mapDiv, #usMap{
     width:100%;
-    height: 100vh;
+    height: calc(100 * var(--vh));
     position: fixed;
     margin:0 auto;
     z-index: 1;
@@ -1513,10 +1518,10 @@ svg{
     fill:#fff;
     fill-rule: evenodd;
     stroke-width: calc(0.5px/var(--zoom));
-    -o-transition: fill 0.3s ease-in;
-    -moz-transition: fill 0.3s ease-in;
-    -webkit-transition: fill 0.3s ease-in;
-    transition: fill 0.3s ease-in;
+    -o-transition: fill 0.2s ease-in;
+    -moz-transition: fill 0.2s ease-in;
+    -webkit-transition: fill 0.2s ease-in;
+    transition: fill 0.2s ease-in;
     cursor: pointer;
 }
 .map-div path:hover{
@@ -1578,11 +1583,10 @@ svg{
 #about{
     display: none;
     width:100%;
-    height: 100vh;
-    margin:50px auto;
-    padding:0 5px 80px;
+    height: calc(100 * var(--vh));
+    padding:50px 5px 0px;
     overflow-y: scroll;
-    position: relative;
+    position: absolute;
     z-index: 2;
     -webkit-touch-callout: text;
     -webkit-user-select: text;
@@ -1697,9 +1701,6 @@ svg{
 @media(max-width:1024px){
     #header h1{
         font-size: 1em;
-    }
-    #about{
-        padding-bottom:150px;
     }
     .about-flex{
         width:calc(100% - 10px);
@@ -2071,7 +2072,7 @@ svg{
         height: 0;
     }
     .chart-popup-wrapper{
-        -ms-flex-wrap: wrap; flex-wrap: wrap;
+        -webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;
         margin:5px 0px;
     }
     .chart-popup-flex{
@@ -2084,7 +2085,7 @@ svg{
 }
 @media(max-width:520px){
     #countryPopup{
-        padding:0 0 100px;
+        padding:0;
     }
     .stats-column-flex{
         width:calc(100% - 5px);
